syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.chatservice";
option java_outer_classname = "ChatMessageProto";

import "google/protobuf/timestamp.proto";

message ChatMessageBuffer {
  string id = 1;
  string senderId = 2;
  repeated string receiversIds = 3;
  google.protobuf.Timestamp sentAt = 4;
  string content = 5;
  string attachmentType = 6;
  bytes attachmentData = 7;
  string roomId = 8;
}


message SendChatMessageRequest {
  ChatMessageBuffer message = 1;
}


message SendChatMessageResponse {
  bool success = 1;
  string errorMessage = 2;
}


service ChatService {
  rpc SendMessage (SendChatMessageRequest) returns (SendChatMessageResponse);
}